Implement comprehensive interaction system, asset types, and debug console improvements

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 </head>
 
 <body>
-  <div id="overlay">
-    <button id="ar-button">Start AR</button>
+  <div id="ar-overlay-root">
+    <div id="overlay">
+      <button id="ar-button">Start AR</button>
+    </div>
+    <div id="debug-console"></div>
   </div>
-  <div id="debug-console"></div>
   <script type="module" src="/main.js"></script>
 </body>
 
