--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
         <p id="progress-text">0%</p>
       </div>
     </div>
+    <div id="iframe-overlay" style="display: none;">
+      <div class="iframe-header">
+        <button id="close-iframe">Close</button>
+      </div>
+      <iframe id="web-iframe" src=""></iframe>
+    </div>
     <div id="debug-console"></div>
   </div>
   <script type="module" src="/main.js"></script>
